<resources>
    <string name="app_name">TindPlayer</string>

    <string name="about_name_ph">About Leslie</string>
    <string name="last_active_ph">Active 2 days ago</string>
    <string name="name_and_age_ph">Leslie, 24</string>

    <string name="action_settings">Settings</string>
    <string name="bio_ph">"My Bio"</string>
    <string name="distance_ph">2 miles away</string>
    <string name="add_account">Add an account</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="feedback">Feedback</string>
    <string name="history_liked_summary">Liked</string>
    <string name="history_passed_summary">Passed</string>
    <string name="history_match_summary">Match</string>
    <string name="like_engine_summary">0 profile liked</string>
    <string name="select_position_summary">Select your position:</string>
    <string name="switch_account">Switch account</string>
    <string name="login">Login</string>
    <string name="remove_match">Remove Match</string>
    <string name="title_facebook_login_activity">Select or add a facebook account</string>
    <string name="input_default">Default</string>
    <string name="dialog_facebook_new_message">Pick a name for the account</string>
    <string name="dialog_facebook_new_title">New facebook account</string>
    <string name="dialog_ok">OK</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="title_facebook_connect">Connect to your facebook account</string>
    <string name="title_profile_detail">Profile Detail</string>
    <string name="help">Help</string>

    <string name="light">.72</string>
    <string name="light_font">sans-serif-light</string>
    <string name="lighter">.65</string>
    <string name="profile_like_undo_button">Undo like</string>
    <string name="profile_like_button">Like</string>
    <string name="select_account">Or select a registered account:</string>
    <string name="pass_icon">Pass icon</string>
    <string name="choose_account">Add an account to get started</string>
    <string name="facebook_app_id">1509206796044599</string>
    <string name="pref_liker_time">liker_ms_between_likes</string>
    <string name="pref_liker_jitter">liker_ms_jitter</string>
    <string name="pref_liker_max_profile">liker_max_profile_in_list</string>

</resources>
